--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "animate.css": "^4.1.1",
     "apexcharts": "3.50.0",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.5.6",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
